<resources>
    <string name="app_name">PC2-Irupaylla-Tarazona</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Principal</string>
    <string name="menu_gallery">Movimientos</string>
    <string name="menu_slideshow">Finanzas</string>
    <string name="valbtnlogin">Ingresar</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="valetfecha">Seleccione una fecha</string>
    <string name="valetdescripcion">Ingrese una descripción</string>
    <string name="valetmonto">Ingrese un importe</string>

</resources>